navigation with nicer counters on mobile layout

--- a/src/tpl/nav.html
+++ b/src/tpl/nav.html
@@ -6,7 +6,8 @@
   <ul class="nav__folders">
     <li class="nav__folder nav__folder--open">
       <a href="javascript:;">
-        <svg role="presentation"><use xlink:href="#icon-inbox" /></svg> Inbox (2)
+        <svg role="presentation"><use xlink:href="#icon-inbox" /></svg> Inbox
+        <span class="nav__counter">99+</span>
       </a>
       <button class="btn-icon-very-light">
         <svg><use xlink:href="#icon-dropdown" /><title>More</title></svg>
@@ -29,14 +30,15 @@
     </li>
     <li class="nav__folder">
       <a href="javascript:;">
-        <svg role="presentation"><use xlink:href="#icon-star" /></svg> Markiert (1)
+        <svg role="presentation"><use xlink:href="#icon-star" /></svg> Markiert
+        <span class="nav__counter">1</span>
       </a>
     </li>
   </ul>
   <ul class="nav__folders">
     <li class="nav__folder">
       <a href="javascript:;">
-        <svg role="presentation"><use xlink:href="#icon-folder" /></svg> Allianz
+        <svg role="presentation"><use xlink:href="#icon-folder" /></svg> Extra long folder name
       </a>
     </li>
     <li class="nav__folder">
