--- a/src/tpl/mail-list.html
+++ b/src/tpl/mail-list.html
@@ -46,6 +46,9 @@
           <li class="mail-list-entry__flags-answered" ng-show="!email.unread && email.answered">
             <svg><use xlink:href="#icon-reply" /><title>Answered</title></svg>
           </li>
+          <li class="mail-list-entry__flags-attachment">
+            <svg><use xlink:href="#icon-attachment" /><title>Attachments</title></svg>
+          </li>
         </ul>
         <h3 class="mail-list-entry__name">{{email.from[0].name || email.from[0].address}}</h3>
         <div class="mail-list-entry__subject">{{email.subject || 'No subject'}}</div>
@@ -54,6 +57,10 @@
         </div>
         <time class="mail-list-entry__time">{{email.sentDate | date:'mediumDate'}}</time>
         <div class="mail-list-entry__excerpt">{{email.body ? email.body.substr(0, 200) : ''}}</div>
+        <div class="mail-list-entry__encrypted">
+          <svg ng-show="email.encrypted && !email.decrypted"><use xlink:href="#icon-encrypted" /><title>Encrypted</title></svg>
+          <svg ng-show="email.encrypted && email.decrypted"><use xlink:href="#icon-decrypted" /><title>Decrypted</title></svg>
+        </div>
       </li>
     </ul>
   </div>
