--- a/src/tpl/mail-list.html
+++ b/src/tpl/mail-list.html
@@ -1,7 +1,7 @@
 <div class="mail-list" ng-controller="MailListCtrl">
 
-  <header>
-    <div wo-touch="state.nav.toggle(true); $event.stopPropagation()">
+  <header wo-touch="state.nav.toggle(true); $event.stopPropagation()">
+    <div>
       <button class="btn-navicon">
         <svg><use xlink:href="#icon-navicon" /><title>Toggle Navigation</title></svg>
       </button>
@@ -11,14 +11,15 @@
     <button class="btn-icon" title="New mail" wo-touch="state.writer.write(); $event.stopPropagation()">
       <svg><use xlink:href="#icon-write" /><title>New mail</title></svg>
     </button>
-
+  </header>
+  <div class="mail-list__search">
     <div class="search">
       <svg><use xlink:href="#icon-search" /><title>Search</title></svg>
       <input class="input-text" type="text" ng-model="searchText"
         ng-change="displaySearchResults(searchText)"
         placeholder="Search" focus-me="state.mailList.searching">
     </div>
-  </header>
+  </div>
 
   <div class="mail-list__scroll-canvas" list-scroll="displayMessages">
     <ul class="mail-list__entries" infinite-scroll="displayMore()"
