Optimized mobile read view

--- a/src/tpl/mail-list.html
+++ b/src/tpl/mail-list.html
@@ -8,7 +8,7 @@
       <h2>{{state.nav.currentFolder.type}}</h2>
     </div>
 
-    <button class="btn-icon" title="New mail" wo-touch="state.writer.write(); $event.stopPropagation()">
+    <button class="btn-icon-light" title="New mail" wo-touch="state.writer.write(); $event.stopPropagation()">
       <svg><use xlink:href="#icon-write" /><title>New mail</title></svg>
     </button>
   </header>
